fix bug: link's text too small

--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -8,6 +8,9 @@
     $--font-path: '~element-ui/lib/theme-chalk/fonts';
     @import "~element-ui/packages/theme-chalk/src/index";
 }
+:root .el-link {
+    font-size: inherit;
+}
 .el-menu--horizontal ul {
     background: var(--board-bg-color)!important;
     li{
